--- a/src/components/BookDetails.astro
+++ b/src/components/BookDetails.astro
@@ -8,7 +8,7 @@
             <img
                 src="/marcoswift.png"
                 alt="Marco Swift Book Cover"
-                class="w-48 md:w-64 shadow-xl rounded-sm"
+                class="w-48 md:w-64 rounded-sm"
             />
         </div>
 
