--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -54,7 +54,7 @@
         <!-- Book Cover -->
         <div class="flex-1 flex justify-center">
             <div
-                class="relative w-[300px] md:w-[400px] shadow-2xl flex items-center justify-center"
+                class="relative w-[300px] md:w-[400px] flex items-center justify-center"
             >
                 <img
                     src="/marcoswift.png"
