--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,11 @@ import BookDetails from "../components/BookDetails.astro";
 import Newsletter from "../components/Newsletter.astro";
 ---
 
-<Layout title="Marco Swift and the Mirror of Souls | D. E. Cunningham">
+<Layout
+	title="Marco Swift and the Mirror of Souls | D. E. Cunningham"
+	description="Welcome to the official world of Marco Swift. Discover the middle-grade fantasy novel that explores forgiveness, truth, and love."
+	image="/marcoswift.png"
+>
 	<Hero />
 
 	<div class="relative z-20">
