--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@ const currentYear = new Date().getFullYear();
             <div class="flex space-x-2">
                 <a
                     href="https://www.facebook.com/DECunninghamAuthor/"
-                    class="w-10 h-10 bg-brand-muted hover:bg-brand-primary transition-colors rounded flex items-center justify-center text-white"
+                    class="w-10 h-10 bg-brand-muted hover:bg-brand-primary transition-colors rounded flex items-center justify-center text-white hover:!text-white"
                 >
                     <svg
                         class="w-5 h-5 fill-current"
@@ -25,7 +25,7 @@ const currentYear = new Date().getFullYear();
                 </a>
                 <a
                     href="https://www.instagram.com/d.e.cunninghamauthor/"
-                    class="w-10 h-10 bg-brand-muted hover:bg-brand-primary transition-colors rounded flex items-center justify-center text-white"
+                    class="w-10 h-10 bg-brand-muted hover:bg-brand-primary transition-colors rounded flex items-center justify-center text-white hover:!text-white"
                 >
                     <svg
                         class="w-5 h-5 fill-current"
