--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -44,8 +44,10 @@ const currentYear = new Date().getFullYear();
                 <a href="/" class="hover:underline">Home</a> |
                 <a href="/#author" class="hover:underline">About</a> |
                 <a href="/book" class="hover:underline">Book</a> |
-                <a href="/#contact" class="hover:underline">Contact</a> |
-                <a href="/#subscribe" class="hover:underline">Subscribe</a>
+                <a
+                    href="mailto:decunningham@marcoswift.com"
+                    class="hover:underline">Contact</a
+                > |
             </nav>
 
             <div class="pt-4 text-center">
