--- a/src/components/BookDetails.astro
+++ b/src/components/BookDetails.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<section id="book" class="py-24 bg-brand-bg relative">
+<section id="book" class="py-24 relative">
     <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
         <div class="flex justify-center mb-8">
             <img
