--- a/src/components/Author.astro
+++ b/src/components/Author.astro
@@ -4,7 +4,7 @@
 
 <section
     id="author"
-    class="py-24 bg-white relative overflow-hidden border-t border-gray-100"
+    class="py-24 relative overflow-hidden border-t border-brand-primary/10"
 >
     <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex flex-col md:flex-row items-center gap-16">
